# Codexs_bot_Git

./: .gitignore  AUDIT_FIXES_IMPLEMENTATION.md  AUDIT_FIXES_SUMMARY.md  AUDIT_FIX_PLAN.md  AUDIT_REPORT.md  BOTFATHER_COMMANDS.txt  BOTFATHER_COMMANDS_COMPLETE.md  BOTFATHER_CONFIG.md  BOTFATHER_QUICK_REFERENCE.md  BOT_CAPABILITIES.md  BRANDING_VERIFICATION.md  BUG_FIX_PLAN.md  BUG_REPORT.md  BUILD_STATUS.md  CLEANUP_COMPLETE.md  CLEANUP_SUMMARY.md  CLOUD_DEPLOYMENT.md  COMPLETE_PROJECT_DOCUMENTATION.md  COMPLETE_STATUS.md  COMPREHENSIVE_AUDIT.md  COMPREHENSIVE_IMPROVEMENT_PLAN.md  COMPREHENSIVE_VERIFICATION.md  CRITICAL_FIXES_COMPLETE.md  CRITICAL_FIXES_SUMMARY.md  DEEP_LOGIC_ANALYSIS.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_READY.md  DEPLOYMENT_SUMMARY.md  FINAL_AUDIT_ISSUES.md  FINAL_DEPLOYMENT_READY.md  FINAL_IMPLEMENTATION_SUMMARY.md  FINAL_STATUS.md  FINAL_VERIFICATION.md  FIXES_SUMMARY.md  FULL_PROJECT_AUDIT.md  GITHUB_SETUP.md  GROUP_CHAT_FEATURES.md  IMAGE_SETUP.md  (+30 more)
data/: applications.jsonl  contact_messages.jsonl
docs/: audit-flows.md  audit-localization.md  content-plan.md  qa-checklist.md
scripts/: com.codexs.bot.plist  run_bot.sh  run_bot_background.sh  stop_bot.sh
src/codexs_ai_bot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/codexs_bot/: ai.py  bot.py  config.py  conversation_logger.py  localization.py  notifications.py  remote_config.py  session.py  storage.py  (+1 more)
tests/: conftest.py  test_bot_helpers.py  test_remote_config.py  test_session.py  test_validation.py
